fix(dropdown button): Correct spacing of dropdown icon
Ensures there is space between icon and text for dropdown buttons

--- a/src/components/base/dropdown/dropdown.scss
+++ b/src/components/base/dropdown/dropdown.scss
@@ -108,6 +108,10 @@
     }
   }
 
+  .dropdown-icon {
+    @include gl-mr-2;
+  }
+
   .dropdown-icon-text,
   .dropdown-icon-only {
     @include gl-pl-3;
